# kabu-researcher

./: .gitignore  README.md  app.py  conditions.yaml  pyproject.toml  requirements.txt
.claude/commands/: dashboard.md  watch.md
.github/workflows/: build_pool.yml
.streamlit/: config.toml
docs/superpowers/plans/: 2026-06-27-dashboard-v1.md  2026-06-27-phase2-pool-builder.md
docs/superpowers/specs/: 2026-06-27-dashboard-v1-design.md  2026-06-27-phase2-pool-builder-design.md
scripts/: backtest.py  build_pool.py
src/: config.py  dashboard_data.py  fetch.py  fundamentals.py  jquants.py  notify.py  trend.py  trigger.py  watch_runner.py
tests/: test_config.py  test_dashboard_data.py  test_fundamentals.py  test_notify.py  test_trend.py  test_trigger.py
